# fastapi-background

./: README.md  docker-compose.yaml  pyproject.toml
app/: broker.py  main.py  queues.py
app/jobs/: orders.py
app/schemas/: __init__.py  order_schema.py
scripts/: server-entrypoint.sh  worker-entrypoint.sh
